--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ pytils==0.3
 django-ckeditor==5.9.0
 django-js-asset==1.2.2
 django-froala-editor==3.2.0
+django-summernote==0.8.11.6
+django-markdownx==3.0.1
