--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.10
 backcall==0.2.0
 certifi==2020.6.20
 chardet==3.0.4
+colorama==0.4.3
 decorator==4.4.2
 defusedxml==0.6.0
 Django==3.0.8
@@ -11,6 +12,7 @@ django-ckeditor==5.9.0
 django-froala-editor==3.2.0
 django-js-asset==1.2.2
 django-markdownx==3.0.1
+django-online-users==0.3
 django-summernote==0.8.11.6
 gunicorn==20.0.4
 idna==2.10
