--- a/requirements_pyrhon3_9.txt
+++ b/requirements_pyrhon3_9.txt
@@ -2,6 +2,7 @@ asgiref==3.2.10
 backcall==0.2.0
 certifi==2020.6.20
 chardet==3.0.4
+colorama==0.4.3
 decorator==4.4.2
 defusedxml==0.6.0
 Django==3.0.8
@@ -11,6 +12,7 @@ django-ckeditor==5.9.0
 django-froala-editor==3.2.0
 django-js-asset==1.2.2
 django-markdownx==3.0.1
+django-online-users==0.3
 django-summernote==0.8.11.6
 gunicorn==20.0.4
 idna==2.10
@@ -22,9 +24,9 @@ oauthlib==3.1.0
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.2.0
+Pillow==8.0.1
 prompt-toolkit==3.0.5
-psycopg2==2.8.5
+psycopg2==2.8.6
 ptyprocess==0.6.0
 Pygments==2.6.1
 python3-openid==3.2.0
@@ -36,8 +38,7 @@ six==1.15.0
 sqlparse==0.3.1
 traitlets==4.3.3
 urllib3==1.25.10
-<<<<<<< HEAD
 wcwidth==0.2.5
-=======
-wcwidth==0.2.5
->>>>>>> bb9f00eea665cfcfcdc259d1c6c539fd1dc634b2
+django-grappelli==2.14.2
+django-smart-selects==1.5.8
+django-colorfield==0.3.2
